<resources>
  <string name="app_name">Jumbo</string>
  <string name="action_settings">Settings</string>
  <string name="invalid_username_length">Username must have from 6 to 15 characters</string>
  <string name="invalid_email">Email incorrectly</string>
  <string name="invalid_password_length">Password must not blank.</string>
  <string name="invalid_password_character">Password must have only numeric characters</string>
  <string name="user_name">User name</string>
  <string name="password">Password</string>
  <string name="sign_in">Sign In</string>
  <string name="hello">Hello</string>
  <string name="sign_in_to_your_account">Sign in to your account</string>
  <string name="products">Products</string>
  <string name="supermarkets">Supper Markets</string>
  <string name="account">Account</string>
  <string name="sign_out">Sign Out</string>
  <string name="no">No</string>
  <string name="yes">Yes</string>
  <string name="close">Close</string>
  <string name="check_in_out">Check-In/Out</string>
  <string name="cancel">Cancel</string>
  <string name="submit">Submit</string>
  <string name="check_in_out_at">Are you sure to check-in/out?</string>
  <string name="super_market">Super market:</string>
  <string name="time">Time:</string>
  <string name="check_in_out_successful">Check-In/Out successful.</string>
  <string name="invalid_user_not_exist">User isn\'t existed.</string>
  <string name="user_name_or_password_is_wrong">User name or password is wrong.</string>
  <string name="price">Price:</string>
  <string name="remaining_number">Remain:</string>
  <string name="email">Email:</string>
  <string name="phone">Phone:</string>
  <string name="info_detail">Information:</string>
  <string name="contact">Contact:</string>
  <string name="sex">Sex:</string>
  <string name="address">Address:</string>
  <string name="birthday">Birthday:</string>
  <string name="msg_sign_out">Do you really want to sign out?</string>
  <string name="ok">ok</string>
  <string name="rationale_location">This app needs access to your location so you can check in/out.</string>
  <string name="msg_thank_for_your_accceptance">Thank for your acceptance.</string>
</resources>
